# Rhea-Soil-Nutrient-Prediction-Challenge

./: .gitignore  main.py  pyproject.toml
data/zindi/: manifest-f3bd747685a0fe0facbe5fe91633b08c20260204-5985-1uygckz.json
notebooks/: sample_distribution_and_knn_predictor.ipynb
notebooks/.ipynb_checkpoints/: sample_distribution_and_knn_predictor-checkpoint.ipynb
src/: config.py
